# tensordata

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
.github/workflows/: code_quality.yml  pytest.yml
tensordata/: __init__.py  alter.py  atyeo.py  chung.py  createDataset.py  functional.py  jones.py  kaplonek.py  kaplonekVaccine.py  kaplonekVaccineSA.py  scRNA.py  serology.py  util.py  zohar.py
tensordata/chung2021/: fig1.csv  fig6.csv
tensordata/figures/: common.py  figure1.py
tensordata/jones2017/: RA Tensor DataSet.nc  RA_DataFrame.csv
tensordata/kaplonek2021/: MGH_Features.csv  MGH_Sero.Meta.data.WHO124.csv  MGH_Sero.Neut.WHO124.log10.csv  MGH_Visualizing.Plate.WHO124.csv  ReadMe.txt  SpaceX_Control.Data.csv  SpaceX_Features.csv  SpaceX_Sero.Data.csv  SpaceX_meta.data.csv  SpaceX_symptom.csv
tensordata/kaplonekVaccine2022/: Luminex-functional-assay.csv  RBD-depletion.csv  comparison-between-vaccine-samples.csv  comparison-vaccines-and-prior-infection.csv  readme.txt
tensordata/kaplonekVaccineSA2023/: luminex.csv  readme.md
tensordata/scRNA/: __init__.py  main.py  read_10x_mtx.py
tensordata/test/: test_import.py
