[tool.poetry]
name = "tensordata"
version = "0.0.8"
description = "A common repository for tensor structured datasets."
authors = ["Cyrillus Tan <cyztan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=1.0"
xarray = ">=2023"
anndata = "^0.10.7"
numpy = "^1.26"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
