[tool.poetry]
name = "tensordata"
version = "0.0.9"
description = "A common repository for tensor structured datasets."
authors = ["Cyrillus Tan <cyztan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0"
xarray = ">=2023"
anndata = "^0.11"
numpy = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
ruff = "^0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
