[project]
name = "tensordata"
version = "0.0.9"
description = "A common repository for tensor structured datasets."
authors = [
    { name = "Cyrillus Tan", email = "cyztan@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11, <3.14"
dependencies = [
    "pandas>=2.1",
    "xarray>=2025,<2026.0.0",
    "anndata>=0.12,<0.13",
    "numpy>=2.1,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.14,<0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
